src/test/deca/context/invalid/created/binary_exp/op_bool/or_float_float.deca
// Description :
//    test or entre un float et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Type gauche float. Type droit float Type attendu: ‘boolean’

{
float a;
float b;
boolean c = a || b;
}

